--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
         <link rel="stylesheet" href="https://use.typekit.net/qwx6jnz.css">
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
         <link rel="icon" href="img/버질아블로 파비콘.png" type="image/x-icon">
-        <meta property="og:url" content="index URL을 등록 할 것">
-        <meta property="og:title" content="타이틀 정보 기입">
+        <meta property="og:url" content="https://dddime.github.io/virgil-abloh/">
+        <meta property="og:title" content="버질아블로">
         <meta property="og:type" content="website">
-        <meta property="og:image" content="img.png">
-        <meta property="og:description" content="세부 텍스트 정보">
+        <meta property="og:image" content="img/버질아블로 OG">
+        <meta property="og:description" content="버질아블로의 업적">
 
     </head>
     <body>
