--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta property="og:url" content="https://dddime.github.io/virgil-abloh/">
         <meta property="og:title" content="버질아블로">
         <meta property="og:type" content="website">
-        <meta property="og:image" content="img/버질아블로 OG">
+        <meta property="og:image" content="img/버질아블로 OG.png">
         <meta property="og:description" content="버질아블로의 업적">
 
     </head>
