--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
         <link rel="icon" href="img/버질아블로 파비콘.png" type="image/x-icon">
         <meta property="og:url" content="https://dddime.github.io/virgil-abloh/">
-        <meta property="og:title" content="버질아블로">
+        <meta property="og:title" content="Virgil Abloh">
         <meta property="og:type" content="website">
-        <meta property="og:image" content="img/버질아블로 OG.png">
-        <meta property="og:description" content="버질아블로의 업적">
+        <meta property="og:image" content="img/ogimg.png">
+        <meta property="og:description" content="버질 알볼로에 대하여">
 
     </head>
     <body>
