--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta property="og:title" content="Virgil Abloh">
         <meta property="og:type" content="website">
         <meta property="og:image" content="img/ogimg.png">
-        <meta property="og:description" content="버질 알볼로에 대하여">
+        <meta property="og:description" content="버질 아블로에 대하여">
 
     </head>
     <body>
